# python-sql

./: .gitignore  main.py  pyproject.toml  suggestions.md
db/: room_data_access.py  student_data_access.py
entities/: room.py  student.py
loader/: data_loader.py
output/: largest_age_diff.json  mixed_gender_rooms.json  room_counts.json  smallest_avg_age.json
queries/: largest_age_diff.py  mixed_gender.py  rooms_count.py  smallest_avg_age.py
repositories/: data_loader.py  db_config.py  room_repository.py  student_repository.py
sqlmapper/: data_loader.py  db_config.py  interfaces.py  repository.py  schema_creator.py
sqlmapper/queries/: largest_age_diff.py  mixed_gender.py  rooms_count.py  smallest_avg_age.py
